# itksnap

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CTestConfig.cmake  ContrastSettings.xml  Install.html  README.git  README.html  README.md  ReleaseNotes.md  ReleaseNotes.txt  todo
.github/workflows/: build.yml
CMake/: BundleUtilities2.cmake  CustomBuildSettings.cmake  DeployQt5.cmake  GetPrerequisites2.cmake  GitBranch.cmake  InstallQt5Plugin.cmake  find_fltk_13.cmake  standalone.cmake
CMake/rpavlik/: GetGitRevisionDescription.cmake
Common/: AbstractModel.cxx  AbstractModel.h  AbstractProgressDelegate.h  AbstractPropertyContainerModel.cxx  AbstractPropertyContainerModel.h  AbstractSSHAuthDelegate.h  AffineTransformHelper.cxx  AffineTransformHelper.h  ColorLabelPropertyModel.h  CommandLineArgumentParser.cxx  CommandLineArgumentParser.h  ContrastXML.cxx  ContrastXML.h  Credits.h  EventBucket.cxx  EventBucket.h  ExtendedGDCMSerieHelper.cxx  ExtendedGDCMSerieHelper.h  GPUSettings.h.in  HistoryManager.cxx  HistoryManager.h  IPCHandler.cxx  IPCHandler.h  IRISException.cxx  IRISException.h  IRISObserverPattern.cxx  IRISObserverPattern.h  IRISVectorTemplates.cxx  IRISVectorTypes.h  IRISVectorTypes.txx  IRISVectorTypesToITKConversion.h  ImageFunctions.cxx  ImageFunctions.h  MultiFrameDicomSeriesSorter.cxx  MultiFrameDicomSeriesSorter.h  PresetManager.h  PresetManager.hxx  Property.cxx  Property.h  PropertyModel.h  (+25 more)
Common/ITKBinaryWeightedAverage/: itkBWAandRFinterpolation.h  itkBWAandRFinterpolation.hxx  itkBWAandRFinterpolation_old.h  itkBWAandRFinterpolation_old.txx  itkBWAfilter.h  itkBWAfilter.hxx  itkComputeInterpolation.h  itkComputeInterpolation.txx  itkRFLabelMap.h  itkRFLabelMap.txx  itkRandomForest.h  itkRandomForest.txx
Common/ITKExtras/: README.txt  ThreadPool.h  itkBSplineScatteredDataPointSetToImageFilter.h  itkBSplineScatteredDataPointSetToImageFilter.txx  itkBinaryDiamondStructuringElement.h  itkBinaryDiamondStructuringElement.txx  itkCoxDeBoorBSplineKernelFunction.h  itkCoxDeBoorBSplineKernelFunction.txx  itkMaximumGradientMagnitudeImageFilter.h  itkMaximumGradientMagnitudeImageFilter.hxx  itkMorphologicalContourInterpolator.h  itkMorphologicalContourInterpolator.hxx  itkParallelSparseFieldLevelSetImageFilterBugFix.h  itkParallelSparseFieldLevelSetImageFilterBugFix.txx  itkRepresentImageAsVectorImageFilter.h  itkTopologyPreservingDigitalSurfaceEvolutionImageFilter.h  itkTopologyPreservingDigitalSurfaceEvolutionImageFilter.txx  itkTustisonBSplineKernelFunction.h  itkTustisonBSplineKernelFunction.txx  itkTustisonBSplineScatteredDataPointSetToImageFilter.h  itkTustisonBSplineScatteredDataPointSetToImageFilter.txx  itkTustisonPointSetToImageFilter.h  itkTustisonPointSetToImageFilter.txx  itkVoxBoCUBImageIO.cxx  itkVoxBoCUBImageIO.h  itkVoxBoCUBImageIOFactory.cxx  itkVoxBoCUBImageIOFactory.h
Common/JSon/: README.md  jsoncpp.cpp
Common/Minizip/: crypt.h  ioapi.c  iowin32.c  iowin32.h  miniunz.c  miniunz.h  minizip.c  minizip.h  minizip_add_ons.cxx  unzip.c  unzip.h  zip.c  zip.h
Common/Minzip/: crypt.h  iowin32.c  miniunz.c  miniunz.h
Common/tdigest_apache/: common_defs.hpp  tdigest.hpp  tdigest_impl.hpp
Documentation/DesignNotes/: gui_design.txt
Documentation/Developer/: MemoryLeakTestingMacOS.md  MemoryManagement.md  RemoteURLs.md
Documentation/Shortcuts/: Shortcuts_SNAP3.pages
GUI/Model/: AbstractLayerAssociatedModel.cxx  AbstractLayerAssociatedModel.h  AbstractLayerInfoItemSetDomain.h  AbstractModel.cxx  AbstractModel.h  AnnotationModel.cxx  AnnotationModel.h  CollectionModel.cxx  CollectionModel.h  ColorLabelPropertyModel.cxx  ColorLabelPropertyModel.h  ColorLabelQuickListModel.cxx  ColorLabelQuickListModel.h  ColorMapModel.cxx  ColorMapModel.h  ComponentSelectionModel.cxx  ComponentSelectionModel.h  CursorInspectionModel.cxx  CursorInspectionModel.h  DeepLearningSegmentationModel.cxx  DeepLearningSegmentationModel.h  DeformationGridModel.cxx  DeformationGridModel.h  DisplayLayoutModel.cxx  DisplayLayoutModel.h  DistributedSegmentationModel.cxx  DistributedSegmentationModel.h  EditableNumericValueModel.cxx  EditableNumericValueModel.h  Generic3DModel.cxx  Generic3DModel.h  GenericSliceModel.cxx  GenericSliceModel.h  GlobalPreferencesModel.cxx  GlobalPreferencesModel.h  GlobalUIModel.cxx  GlobalUIModel.h  GlobalWSWizardModel.cxx  GlobalWSWizardModel.h  IOActions.cxx  (+82 more)
GUI/Qt/: main.cxx
GUI/Renderer/: AbstractContextBasedRenderer.h  AbstractNewRenderer.h  AbstractRenderer.cxx  AbstractRenderer.h  AbstractVTKRenderer.cxx  AbstractVTKRenderer.h  AbstractVTKSceneRenderer.cxx  AbstractVTKSceneRenderer.h  AnnotationRenderer.cxx  AnnotationRenderer.h  ColorMapRenderer.cxx  ColorMapRenderer.h  CrosshairsRenderer.cxx  CrosshairsRenderer.h  DeformationGridRenderer.cxx  DeformationGridRenderer.h  EdgePreprocessingSettingsRenderer.cxx  GLToPNG.cxx  GLToPNG.h  (+55 more)
GUI/Renderer/OrientationWidget/Reorient/: AbstractScannerHelper.cxx  AbstractScannerHelper.h  AxesWidget.cxx  AxesWidget.h  CMakeLists.txt  PolyDataAlgorithm2ActorPipe.cxx  PolyDataAlgorithm2ActorPipe.h  ReorientProps.cxx  ReorientProps.h  ScannedHuman.cxx  ScannedHuman.h  ScanningROI.cxx  ScanningROI.h  Source2ActorPipe.h
GUI/Renderer/OrientationWidget/Test_OrientationWidget/: CMakeLists.txt  OrientationWidgetGUI.cxx  OrientationWidgetGUI.h  OrientationWidgetGUI.ui  main.cxx
GUI/Renderer/OrientationWidget/Test_ReorientGUI/: CMakeLists.txt  Reorient.cxx  Reorient.h  ReorientGUI.cpp  ReorientGUI.cxx  ReorientGUI.h  ReorientGUI.ui  main.cpp
Logic/RandomForest/: CMakeLists.txt  Makefile  classRF.cpp  classTree.cpp  rf_snap.cpp  rfutils.cpp
ProgramData/: CMakeLists.txt  SNAPProgramDataDirectory.txt
Testing/: SNAPTestDriver.cxx  SNAPTestDriver.h  TestBase.h  TestCompareLevelSets.cxx  TestCompareLevelSets.h  TestImageWrapper.h  TutorialTest.cxx
UserInterface/: SNAPMain.cxx  SNAP_CC_PNG.cxx
Utilities/: licensetemplate.txt  package_info.json
Utilities/Forwarding/: CMakeLists.txt  SharedForwardExe.c.in
Utilities/Workspace/: CMakeLists.txt  WorkspaceTool.cxx
(+979 files in other folders)
